--- a/ios/ReactNativeBackgroundLocation/Info.plist
+++ b/ios/ReactNativeBackgroundLocation/Info.plist
@@ -36,7 +36,21 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Konumunuz bağlı olduğunuz şirket ile paylaşılacaktır.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Konumunuz bağlı olduğunuz şirket ile paylaşılacaktır.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Cihazınızın hareket ettiğini tespit etmek için gereklidir.</string>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.transistorsoft.fetch</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
